--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>My First Webpage</h1>
+    <h1>My Webpage </h1>
     <h2>Written with a little guidance from Moringa School</h2>
 
     <p>Hello, world!</p>
